--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "svg-captcha",
+  "name": "svg-captcha-browser",
   "version": "1.4.0",
-  "description": "generate svg captcha in node.js or express.js",
+  "description": "generate svg captcha in browser",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -9,27 +9,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/steambap/svg-captcha.git"
+    "url": "git+https://github.com/Dreams-d/svg-captcha.git"
   },
   "keywords": [
+    "captcha browser",
     "captcha",
     "svg",
-    "node captcha",
     "captcha generator",
     "captcha alternative"
   ],
   "author": {
-    "name": "Weilin Shi",
-    "email": "934587911@qq.com"
-  },
-  "engines": {
-    "node": ">=4.x"
+    "name": "LuoMan",
+    "email": "811789670@qq.com"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/steambap/svg-captcha/issues"
+    "url": "https://github.com/Dreams-d/svg-captcha/issues"
   },
-  "homepage": "https://github.com/steambap/svg-captcha#readme",
+  "homepage": "https://github.com/Dreams-d/svg-captcha#readme",
   "dependencies": {
     "opentype.js": "^0.7.3"
   },
@@ -37,6 +34,9 @@
     "jest": "^21.1.0",
     "jest-environment-node-debug": "^2.0.0",
     "xo": "^0.18.2"
+  },
+  "engines": {
+    "node": ">=4.x"
   },
   "xo": {
     "esnext": true,
