修改版本号

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "svg-captcha-browser",
-  "version": "1.4.0",
+  "version": "1.0.0",
+  "private": false,
   "description": "generate svg captcha in browser",
   "main": "index.js",
   "scripts": {
